tests/ui/higher-ranked/hrtb-associated-type-leak-check-55731.stderr
error: implementation of `DistributedIteratorMulti` is not general enough
  --> $DIR/hrtb-associated-type-leak-check-55731.rs:49:5
   |
LL | /     multi(Map {
LL | |         i: Cloned(PhantomData),
LL | |         f: X,
LL | |     });
   | |______^ implementation of `DistributedIteratorMulti` is not general enough
   |
   = note: `DistributedIteratorMulti<&'0 ()>` would have to be implemented for the type `Cloned<&()>`, for any lifetime `'0`...
   = note: ...but `DistributedIteratorMulti<&'1 ()>` is actually implemented for the type `Cloned<&'1 ()>`, for some specific lifetime `'1`

error: aborting due to 1 previous error

